--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div id="schedulePage">
-            <p><span id="ul">Session 1: Breakthrough</span> - 24th of March - Concordia EV Building - Room 7.735</p>
+            <p><span id="ul">Session 1: Breakthrough</span> - March 24th - Concordia EV Building - Room 7.735</p>
             
             <p>The early stages of an art project for university involve complex stages of ideation and planning</p>
             <p>And we want you to do it out loud</p>
