--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <p>Vienna is a space for digital artists to <span id="ul">share</span></p>
             
             <p>We welcome all artists who use digital technology in their practice to discuss:</p>
-            <ul> - Art in any form that have been inspiring you</ul>
             <ul> - Projects you are currently working on/completed</ul>
+            <ul> - Art in any form that has been inspiring you</ul>
             <ul> - Your stories and truths</ul>
             
             <p>One of the most important skills for an artist in the age of information is taste. Your ability to filter and select meaning and value from the world. </p>
